2006-03-19  Ales Hakl  <ales at hakl dot net>

	* src/number.c (dfsch_make_number_from_double): New way of parsing
	numbers - discriminate between fixnum and flonum
	(n_equal_p): support for comparing different numeric types
	(NUMBER_BINOP): First try at type-aware numeric operators 
	(native_slash_i): /i functions for integer division

	* src/dfsch.c (dfsch_call_ec): Continuations moved to dfsch.c and
	improved a bit.

2006-03-18  Ales Hakl  <ales at hakl dot net>

	* src/number.c: Fixnum support (unused for now)

2006-03-15  Ales Hakl  <ales at hakl dot net>

	* src/stream.c: Support for empty vectors

	* src/dfsch.c: Better formating of exceptions.

2006-03-14  Ales Hakl  <ales at hakl dot net>

	* src/dfsch.c: Stack traces
	(closure_write): Print closure's name

2006-03-12  Ales Hakl  <ales at hakl dot net>

	* src/repl.c (sigill_handler_break): Handle SIGILL as exception 
	(BEWARE OF THE HACK)

2006-02-12  Ales Hakl  <ales at hakl dot net>

	* src/strings.c (dfsch_string_utf8_for_each): user selectable
	handling of invalid bytes in utf-8 string

	* dfsch/dfsch.h: Removed remains of DFSCH_THROW

2006-02-11  Ales Hakl  <ales at hakl dot net>

	* src/strings.c (dfsch_string_utf8_length): Length calculation
	function for utf-8 strings 
	(dfsch_string_utf8_length): Fixed bad constant
	(dfsch_string_utf8_ref): string-ref for utf-8 strings
	(dfsch_string_utf8_substring): substring for utf-8 strings
	Better handling of invalid bytes and sequences in utf-8
	(dfsch_string_utf8_for_each): Generalized UTF-8 handling
	(dfsch_string_for_each): Iteration over raw strings
	Fixed some warnings and logic bugs

2006-02-09  Ales Hakl  <ales at hakl dot net>

	* dfsch/dfsch.h: removed DFSCH_THROW

2006-02-08  Ales Hakl  <ales at hakl dot net>

	* dfsch/strings.h (dfsch_string_substring): Added declarations of
	added functions to header file

	* src/strings.c (dfsch_string_length): Return length of list
	(dfsch__string_native_register): Full set of string comparison
	predicates