@@ -142,7 +142,7 @@ static dfsch_object_t* command_exit(void*baton, dfsch_object_t* args,
     exit(0);
   case 1:
     if (dfsch_number_p(dfsch_car(args))){
-      exit((int)dfsch_number(dfsch_car(args)));
+      exit((int)dfsch_number_to_long(dfsch_car(args)));
     }
   default:
     fputs(dfsch_obj_write(args,100,0),stderr);
